--- a/pages/style.css
+++ b/pages/style.css
@@ -1,5 +1,13 @@
+@font-face {
+	font-family: 'mont-black';
+	src: url("../assets/fonts/Roboto-BlackItalic.ttf") format("truetype");
+}
+
+
 :root {
   --header-footer-bg-color: #363940;
+  --default-text-color: #e2e2e2;
+  --h1-font-size: 4em;
 }
 
 .wrapper {
@@ -7,12 +15,27 @@
 }
 
 header {
-  height: 100px;
-  
+  background-color: var(--header-footer-bg-color);
 }
 
-.content {
+.header__content {
   margin: 0 calc((100% - 1920px) / 2 + 260px) 0 calc((100% - 1920px) / 2 + 260px);
-  background-color: var(--header-footer-bg-color);
-  padding: 50px 50px 50px 50px;
+  padding: 20px 50px 20px 50px;
+  display: flex;
+  flex-direction: row;
+  font-size: var(--h1-font-size);
+  align-items: center;
+  
+  color: var(--default-text-color);
+}
+
+.header__content h1 {
+  margin-left: 50px;
+  text-transform: uppercase;
+  font-family: 'mont-black';
+  text-transform: uppercase;
+}
+
+.logo {
+  height: 150px;
 }
