--- a/pages/header.css
+++ b/pages/header.css
@@ -12,16 +12,6 @@
   --header-footer-bg-color: #363940;
   --default-text-color: #e2e2e2;
   --h1-font-size: 2em;
-  --bs-gutter-x: 1.5rem;
-}
-
-/*
-.wrapper {
-  width: 100%;
-}
-*/
-body {
-  background-color: var(--default-text-color);
 }
 
 header {
@@ -73,8 +63,8 @@ h1 {
   font-family: 'sans-reg';
 }
 
-.nav li p {
-  margin-top: 10px;
+.nav li object {
+  margin-bottom: 10px;
 }
 
 .d1 {
