--- a/styles/login.css
+++ b/styles/login.css
@@ -1,8 +1,9 @@
+
 .login-popup {
   width:100%;
   min-height:100%;
   background-color: var(--header-footer-bg-color);
-  overflow: visible;
+  overflow: hidden;
   position:fixed;
 }
 
@@ -13,8 +14,6 @@
   margin-right: -50%;
   transform: translate(-50%, -50%);
 
-  width: 700px;
-  height: 500px;
   padding: 30px;
   background-color: #FFFFFF;
   border-radius:5px;
@@ -28,11 +27,7 @@ h2 {
   color: var(--header-footer-bg-color);
   text-transform: uppercase;
   font-family: 'mont-black';
-  padding-bottom: 25px;
-
-  border-bottom: 1px solid;
-	border-image-slice: 1;
-	border-image-source: linear-gradient(to left, var(--default-text-color), #38495a, var(--default-text-color));
+  padding-bottom: 20px;
 }
 
 h3 {
@@ -41,17 +36,18 @@ h3 {
   color: var(--header-footer-bg-color);
   font-family: 'mont-black';
   padding: 20px 0 20px 0;
+
+  border-top: 1px solid;
+	border-image-slice: 1;
+	border-image-source: linear-gradient(to left, var(--default-text-color), #38495a, var(--default-text-color));
 	}
 
 .number-login {
   display: flex;
   flex-direction: row;
-  height: 35px;
+  height: 40px;
   justify-content: center;
-
-  border-bottom: 1px solid;
-	border-image-slice: 1;
-	border-image-source: linear-gradient(to left, var(--default-text-color), #38495a, var(--default-text-color));
+  margin-bottom: 25px;
 }
 
 .number-login input {
@@ -79,4 +75,25 @@ h3 {
   content: ">";
   font-size: 16px;
   color: #F9F0DA;
+}
+
+.guest-login {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  
+  border-top: 1px solid;
+  padding-top: 25px;
+	border-image-slice: 1;
+	border-image-source: linear-gradient(to left, var(--default-text-color), #38495a, var(--default-text-color));
+}
+
+.guest-button {
+  background-color: var(--header-footer-bg-color);
+  width: 200px;
+  font-family: 'sans-reg';
+  color: var(--default-text-color);
+  border-radius: 5px;
+  height: 35px;
+  padding-bottom: 3px;
 }
