--- a/styles/main.css
+++ b/styles/main.css
@@ -81,3 +81,34 @@ h5 {
 	border-image-slice: 1;
 	border-image-source: linear-gradient(to left, var(--default-text-color), #38495a, var(--default-text-color));
 }
+
+
+.chooser{
+
+  display: flex;
+  flex-direction: column;
+}
+
+.tabs {
+  display: flex;
+  flex-direction: row;
+}
+
+.tab {
+  font-family: 'mont-black';
+  text-transform: uppercase;
+  padding: 20px;
+  background-color: var(--default-text-frame-color);
+}
+
+.tab:focus {
+  background-color: #FFFFFF;
+  border-left: 5px solid var(--header-footer-bg-color);
+  margin-right: -5px;
+}
+
+.information-frame {
+  width: 100%;
+  height: 600px;
+  background-color: #FFFFFF;
+}
